# SI

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  compile_commands.json
backend/: CMakeLists.txt
backend/include/si/: si.hpp
backend/include/si/ai/: context_builder.hpp  gateway.hpp
backend/include/si/ai/providers/: ollama_provider.hpp  openai_provider.hpp
backend/include/si/features/: error_analyzer.hpp  file_ops.hpp  git_context.hpp
backend/include/si/foundation/: config.hpp  logging.hpp  platform.hpp  signals.hpp
backend/include/si/mcp/: client.hpp  stdio_transport.hpp  transport.hpp  types.hpp
backend/include/si/nlohmann/: json.hpp
backend/include/si/rpc/: api_bindings.hpp  server.hpp
backend/include/si/security/: permissions.hpp
backend/include/si/session/: history.hpp
backend/include/si/settings/: settings_manager.hpp
backend/include/si/shell/: block.hpp  block_manager.hpp  executor.hpp  interactive_shell.hpp  workflow.hpp  workflow_engine.hpp
backend/include/si/tools/: fs_tool.hpp  tool_base.hpp
backend/src/: main.cpp
backend/src/ai/: context_builder.cpp  gateway.cpp
backend/src/ai/providers/: ollama_provider.cpp  openai_provider.cpp
backend/src/features/: error_analyzer.cpp  file_ops.cpp  git_context.cpp  interpreter.cpp
backend/src/foundation/: config.cpp  logging.cpp  platform.cpp  signals.cpp
backend/src/mcp/: client.cpp  stdio_transport.cpp
backend/src/rpc/: server.cpp
backend/src/security/: permissions.cpp
backend/src/session/: history.cpp
backend/src/settings/: settings_manager.cpp
backend/src/shell/: block_manager.cpp  executor.cpp  interactive_shell.cpp  workflow_engine.cpp
backend/src/tools/: fs_tool.cpp
backend/tests/: build_test.sh  dummy_mcp_server.py  manual_test.cpp  test_ai_gateway.cpp  test_blocks.cpp  test_executor.cpp  test_foundation.cpp  test_interpreter.cpp  test_mcp.cpp  test_ollama.cpp  test_rpc.cpp  test_tools.cpp
config/: si.conf.example
design/: API_REFERENCE.md  ipc_schema.md
docs/: MODELS.md  README.md  architecture.md  building.md  phase2_ai_gateway.md
frontend/: electron.vite.config.ts  index.html  package-lock.json  package.json  tsc_output.txt  tsconfig.node.json  vite.config.ts
frontend/assets/: Pasted--full-focus-on-backend-and-the-api-s-that-are-required-_1767790439637.txt
frontend/electron/: ipc-bridge.ts  main.ts  preload.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AutoCopyHandler.tsx  FileEditor.tsx  InputPrompt.tsx  KeyboardShortcutHandler.tsx  SettingsWindow.tsx  Sidebar.tsx  TerminalBlock.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useBlocks.ts  useSettings.tsx
frontend/src/lib/: queryClient.ts  themes.ts  utils.ts
frontend/src/pages/: TerminalPage.tsx  not-found.tsx
include/: si.hpp
include/ai/: gateway.hpp  provider.hpp
include/ai/providers/: llamacpp_provider.hpp  ollama_provider.hpp  openai_provider.hpp
include/features/: interpreter.hpp
include/foundation/: config.hpp
scripts/: download_model.sh  setup.sh
shared/: ipc_types.ts
src/: main.cpp
src/ai/: gateway.cpp
src/ai/providers/: llamacpp_provider.cpp  ollama_provider.cpp  openai_provider.cpp
src/features/: interpreter.cpp
src/foundation/: config.cpp  logging.cpp  platform.cpp  signals.cpp
src/utils/: logger.h  manager.h  session.h  task.h
tests/: build_ollama_test.sh  manual_test.cpp  test_ai_gateway.cpp  test_foundation.cpp  test_interpreter.cpp  test_ollama.cpp
